# VecMatLib

./: .gitignore  CMakeLists.txt  assert.h
cmake/: VecMatLibConfig.cmake.in
include/VecMatLib/: Geometry.h  Mat2.h  Mat3.h  Quaternion.h  Transform2.h  Transform3.h  Vec2.h  Vec3.h  VecMatLib.h  utils.h  vec2.h  vec3.h
include/VecMatLib/Core/: Mat2.h  Mat3.h  Vec3.h
include/VecMatLib/Math/: Transform2.h  Transform3.h  utils.h
src/: Mat2.cpp  Mat3.cpp  Plane.cpp  Quaternion.cpp  Transform2.cpp  Transform3.cpp  Vec2.cpp  Vec3.cpp  utils.cpp  vec2.cpp  vec3.cpp
tests/: Mat2Tests.cpp  Mat3Tests.cpp  Transform2Tests.cpp  Transform3Tests.cpp  UtilitiesTests.cpp  main.cpp  vec2Test.cpp  vec3Test.cpp
